sites/all/themes/lacuna_stories/sass/components/annotator-touch.scss
/* ... */
.annotator-touch-viewer .annotator-touch-controls button::after {
    left: 15px;
}

//  to fix Edit and Delete buttons looking weird
.annotator-touch-viewer .annotator-button {
    line-height: 1.5em;
    padding-bottom: .6em;
    padding-top: .5em;

    &.annotator-edit {
        padding-right: 2em !important;
    }
}


//  For tags on small screens

@media all and (max-width: 959px) {
    .ui-autocomplete {
        z-index: 2000;
        overflow-y: scroll;
        height: 150px;
    }
}


/*  Styles for annotation filter on small screens. */
@media all and (max-width: 959px) {

    i.af-pager.fa-lg {
        margin-right: 16%;
        font-size: 3em;
    }

    #annotation-filters-wrapper {

        top: 50px;

        $width: 16em;
        width: $width;

        right: 0em;

        &.hidden {

            right: 0em - $width - 1em;

        }

        h2 {

            border-radius: 2px;
            padding: 4px;
            background-color: #eee;
            box-shadow: 0px -2px 2px gray;
            padding-bottom: 15px;
            position: absolute;
            -webkit-transform: rotate(270deg);
            -moz-transform: rotate(270deg);
            -ms-transform: rotate(270deg);
            -o-transform: rotate(270deg);
            width: 12em;
            right: 6.3em;
            top: 6em;

        }

    }

    div#content {
        padding-left: 25px;
        padding-right: 25px;
    }

}

